trunk/Archive2/6d/f569532262d617/output
main.cpp: In function 'int main()':
main.cpp:14:5: error: expected '}' at end of input
     }
     ^
